--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -57,6 +57,12 @@ jobs:
           - php: '8.1'
             moodle-branch: 'MOODLE_404_STABLE'
             database: 'pgsql'
+          - php: '8.3'
+            moodle-branch: 'MOODLE_405_STABLE'
+            database: 'mariadb'
+          - php: '8.1'
+            moodle-branch: 'MOODLE_405_STABLE'
+            database: 'pgsql'
 
     steps:
       - name: Check out repository code
